2011-09-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/40145
	* g++.dg/ext/visibility/warn5.C: New.

2011-09-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/45278
	* g++.dg/warn/Wextra-3.C: New.

2011-09-28  Oleg Endo  <oleg.endo@t-online.de>

	PR target/49486
	* gcc.target/sh/pr49468-si.c: New.

2011-09-28  Tom de Vries  <tom@codesourcery.com>

	PR testsuite/50485
	* gcc.target/i386/sse4_1-blendps.c: Include <stdlib.h>.
	(TEST): Initialize src3 with random floats.
	* gcc.target/i386/sse4_1-blendps-2.c (sse4_1_test): Remove field i from
	union src3.  Initialize src3 with random floats.

2011-09-27  Oleg Endo  <oleg.endo@t-online.de>

	* gcc.target/sh/mfmovd.c: Extend list of supported targets.
	* gcc.target/sh/struct-arg-dw2.c: Fix typo.
	* gcc.target/sh/sh4a-sincos.c: Make test SH4A only.
	* gcc.target/sh/sh4a-sincosf.c: Ditto.
	* gcc.target/sh/sh4a-cos.c: Ditto.
	* gcc.target/sh/sh4a-cosf.c: Ditto.
	* gcc.target/sh/sh4a-sin.c: Ditto.
	* gcc.target/sh/sh4a-sinf.c: Ditto.
	* gcc.target/sh/sh4a-fsrra.c: Ditto.
	* gcc.target/sh/sh4a-memmovua.c: Ditto.
	* gcc.target/sh/sh4a-bitmovua.c: Ditto.

2011-09-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/31489
	* g++.dg/parse/error40.C: New.
	* g++.dg/warn/incomplete1.C: Adjust.

2011-09-27  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49463
	* gcc.c-torture/execute/builtins/strstr-asm-lib.c
	(my_strstr): Mark used.

2011-09-27  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/strlenopt-1.c: New test.
	* gcc.dg/strlenopt-1f.c: New test.
	* gcc.dg/strlenopt-2.c: New test.
	* gcc.dg/strlenopt-2f.c: New test.
	* gcc.dg/strlenopt-3.c: New test.
	* gcc.dg/strlenopt-4.c: New test.
	* gcc.dg/strlenopt-4g.c: New test.
	* gcc.dg/strlenopt-4gf.c: New test.
	* gcc.dg/strlenopt-5.c: New test.
	* gcc.dg/strlenopt-6.c: New test.
	* gcc.dg/strlenopt-7.c: New test.
	* gcc.dg/strlenopt-8.c: New test.
	* gcc.dg/strlenopt-9.c: New test.
	* gcc.dg/strlenopt-10.c: New test.
	* gcc.dg/strlenopt-11.c: New test.